--- a/interface/main.html
+++ b/interface/main.html
@@ -109,7 +109,7 @@
 </head>
 <body>
   <div class="logo">
-    <img src="logo.png" alt="Smart Burme Logo">
+    <img src="assets/logo.png" alt="Smart Burme Logo">
   </div>
   <h1>Welcome to Smart Burme</h1>
 
