--- a/interface/main.html
+++ b/interface/main.html
@@ -6,7 +6,7 @@
     <title>Smart Burme - Main</title>
     
     <!-- Link to External CSS -->
-    <link rel="stylesheet" href="interface/main.css">
+    <link rel="stylesheet" href="interface/style.css">
 </head>
 <body>
     <!-- Menu Toggle Button -->
@@ -62,6 +62,6 @@
     </div>
 
     <!-- Link to External JS -->
-    <script src="interface/main.js" defer></script>
+    <script src="interface/bottom.js" defer></script>
 </body>
 </html>
