--- a/index.html
+++ b/index.html
@@ -1,133 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Smart Burme - Index</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Smart Burme</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Poppins', sans-serif;
+    }
     body {
-      background: linear-gradient(-45deg, #0d0d0d, #1a1a1a, #000000, #262626);
-      background-size: 400% 400%;
-      animation: backgroundShift 12s ease infinite;
-      font-family: 'Segoe UI', sans-serif;
-      color: white;
-      height: 100vh;
-      overflow: hidden;
+      background: linear-gradient(135deg, #4e00c2, #8e2de2);
+      min-height: 100vh;
       display: flex;
-      flex-direction: column;
-      align-items: center;
       justify-content: center;
+      align-items: center;
+      overflow: hidden;
     }
-
-    @keyframes backgroundShift {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
+    .container {
+      width: 360px;
+      height: 720px;
+      background: url('https://i.pinimg.com/originals/7c/4f/4c/7c4f4c5b5deb1bae3553e9affb065c37.jpg') no-repeat center center/cover;
+      border-radius: 20px;
+      position: relative;
+      overflow: hidden;
+      box-shadow: 0 20px 50px rgba(0, 0, 0, 0.5);
     }
-
-    .floating-title {
-      font-size: 60px;
-      font-weight: bold;
-      animation: float3D 4s ease-in-out infinite, colorChange 6s infinite alternate;
-      text-align: center;
-      margin-bottom: 20px;
-    }
-
-    @keyframes float3D {
-      0% { transform: rotateY(0deg) translateY(0); }
-      25% { transform: rotateY(10deg) translateY(-10px); }
-      50% { transform: rotateY(0deg) translateY(0); }
-      75% { transform: rotateY(-10deg) translateY(10px); }
-      100% { transform: rotateY(0deg) translateY(0); }
-    }
-
-    @keyframes colorChange {
-      0% { color: #a0a0a0; }
-      50% { color: #00ccff; }
-      100% { color: #cccccc; }
-    }
-
-    .welcome {
-      font-size: 20px;
-      animation: fadeText 2s ease-out;
-      opacity: 0;
-      animation-fill-mode: forwards;
-    }
-
-    @keyframes fadeText {
-      to { opacity: 1; transform: translateY(0); }
-      from { opacity: 0; transform: translateY(30px); }
-    }
-
-    .buttons {
-      margin-top: 50px;
+    .overlay {
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.5);
+      padding: 30px;
       display: flex;
       flex-direction: column;
-      gap: 15px;
-    }
-
-    .btn {
-      background: linear-gradient(90deg, #3a8bdc, #00d4ff, #3a8bdc);
-      background-size: 200% auto;
-      color: white;
-      padding: 15px 30px;
-      border-radius: 10px;
-      text-decoration: none;
-      font-size: 18px;
-      font-weight: bold;
-      box-shadow: 0 0 15px rgba(0, 204, 255, 0.3);
-      transition: background-position 0.5s, transform 0.3s;
-      text-align: center;
-    }
-
-    .btn:hover {
-      background-position: right center;
-      transform: scale(1.05);
-    }
-
-    #loader {
-      position: absolute;
-      top: 45%;
-      font-size: 20px;
-      color: #aaa;
-    }
-
-    #main-content {
-      display: none;
-      flex-direction: column;
+      justify-content: center;
       align-items: center;
+      text-align: center;
+      color: white;
+    }
+    .logo {
+      font-size: 28px;
+      font-weight: bold;
+      margin-bottom: 20px;
+      letter-spacing: 2px;
+    }
+    .slogan {
+      font-size: 14px;
+      margin-bottom: 50px;
+      opacity: 0.8;
+    }
+    .buttons {
+      display: flex;
+      gap: 20px;
+      margin-bottom: 30px;
+    }
+    .btn {
+      padding: 10px 20px;
+      border: none;
+      border-radius: 30px;
+      font-size: 14px;
+      cursor: pointer;
+      transition: all 0.3s;
+    }
+    .btn.signin {
+      background: linear-gradient(90deg, #6a11cb, #2575fc);
+      color: white;
+    }
+    .btn.signup {
+      background: transparent;
+      border: 2px solid white;
+      color: white;
+    }
+    .btn:hover {
+      opacity: 0.8;
+    }
+    .footer {
+      position: absolute;
+      bottom: 10px;
+      width: 100%;
+      text-align: center;
+      font-size: 12px;
+      opacity: 0.7;
     }
   </style>
 </head>
 <body>
-  <div id="loader">Loading...</div>
 
-  <div id="main-content">
-    <div class="floating-title">Smart Burme</div>
-    <div class="welcome">Welcome to the Smart Burme App</div>
-
+<div class="container">
+  <div class="overlay">
+    <div class="logo">SMART BURME</div>
+    <div class="slogan">CRAFT YOUR MIND<br>MIND YOUR CRAFT</div>
     <div class="buttons">
-      <a href="login.html" class="btn">Login</a>
-      <a href="registration.html" class="btn">Register</a>
-      <a href="forget_password.html" class="btn">Forgot Password</a>
+      <button class="btn signin">SIGN IN</button>
+      <button class="btn signup">SIGN UP</button>
     </div>
+    <div class="footer">Deployment by Aung Myo Kyaw</div>
   </div>
+</div>
 
-  <!-- Loading animation -->
-  <script>
-    setTimeout(() => {
-      document.getElementById('loader').style.display = 'none';
-      document.getElementById('main-content').style.display = 'flex';
-    }, 3000);
-  </script>
-
-  <!-- Firebase auth.js module import -->
-  <script type="module">
-    import { login, register, resetPassword } from './auth.js';
-
-    // အခုအတွက် အကြောင်းအရာမရှိပဲ import လုပ်ထားတာ ဖြစ်ပါတယ်
-    // လိုအပ်တဲ့နေရာမှာ ဒီ function တွေကို သုံးနိုင်ပါတယ်
-  </script>
 </body>
 </html>
