--- a/login.html
+++ b/login.html
@@ -1,135 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Smart Burme - Login</title>
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
-      background: linear-gradient(-45deg, #0d0d0d, #1a1a1a, #000000, #262626);
-      background-size: 400% 400%;
-      animation: backgroundShift 12s ease infinite;
-      font-family: 'Segoe UI', sans-serif;
+      margin: 0;
+      font-family: 'Poppins', sans-serif;
+      background: linear-gradient(135deg, #1a1a40, #4b0082);
       color: white;
-      height: 100vh;
-      overflow: hidden;
       display: flex;
-      flex-direction: column;
-      align-items: center;
       justify-content: center;
-    }
-
-    @keyframes backgroundShift {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
-    }
-
-    .floating-title {
-      font-size: 50px;
-      font-weight: bold;
-      animation: float3D 4s ease-in-out infinite, colorChange 6s infinite alternate;
-      text-align: center;
-      margin-bottom: 20px;
-    }
-
-    @keyframes float3D {
-      0% { transform: rotateY(0deg) translateY(0); }
-      25% { transform: rotateY(10deg) translateY(-10px); }
-      50% { transform: rotateY(0deg) translateY(0); }
-      75% { transform: rotateY(-10deg) translateY(10px); }
-      100% { transform: rotateY(0deg) translateY(0); }
-    }
-
-    @keyframes colorChange {
-      0% { color: #a0a0a0; }
-      50% { color: #00ccff; }
-      100% { color: #cccccc; }
-    }
-
-    form {
-      display: flex;
-      flex-direction: column;
       align-items: center;
-      background-color: rgba(0, 0, 0, 0.7);
-      padding: 40px;
-      border-radius: 10px;
+      height: 100vh;
+    }
+    .login-box {
+      background: rgba(255, 255, 255, 0.1);
+      padding: 2rem;
+      border-radius: 1rem;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+      backdrop-filter: blur(10px);
       width: 300px;
-      box-shadow: 0 0 10px rgba(0, 204, 255, 0.3);
-    }
-
-    input {
-      background-color: #333;
-      color: white;
-      border: none;
-      padding: 15px;
-      margin: 10px 0;
-      border-radius: 10px;
-      width: 100%;
-      font-size: 16px;
-      box-shadow: 0 0 5px rgba(0, 204, 255, 0.3);
-    }
-
-    input:focus {
-      outline: none;
-      border: 2px solid #00ccff;
-    }
-
-    .btn {
-      background: linear-gradient(90deg, #3a8bdc, #00d4ff, #3a8bdc);
-      background-size: 200% auto;
-      color: white;
-      padding: 15px 30px;
-      border-radius: 10px;
-      font-size: 18px;
-      font-weight: bold;
-      box-shadow: 0 0 15px rgba(0, 204, 255, 0.3);
-      transition: background-position 0.5s, transform 0.3s;
       text-align: center;
-      margin-top: 15px;
+    }
+    input {
+      width: 100%;
+      padding: 10px;
+      margin: 10px 0;
+      border: none;
+      border-radius: 5px;
+      outline: none;
+    }
+    button {
+      width: 100%;
+      padding: 10px;
+      background: #6200ea;
+      border: none;
+      color: white;
+      font-weight: bold;
+      border-radius: 5px;
       cursor: pointer;
+      margin-top: 10px;
     }
-
-    .btn:hover {
-      background-position: right center;
-      transform: scale(1.05);
-    }
-
-    .links {
-      margin-top: 20px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    .links a {
-      color: #00ccff;
-      text-decoration: none;
-      margin: 5px;
-      font-size: 14px;
-    }
-
-    .links a:hover {
-      text-decoration: underline;
+    button:hover {
+      background: #7b1fa2;
     }
   </style>
 </head>
 <body>
-  <div class="floating-title">Smart Burme</div>
-  <form id="loginForm">
-    <input type="email" id="email" placeholder="Email" required />
-    <input type="password" id="password" placeholder="Password" required />
-    <button class="btn" type="submit">Login</button>
-  </form>
-  <div class="links">
-    <a href="registration.html">Don't have an account? Register</a>
-    <a href="forget_password.html">Forgot password?</a>
+
+  <div class="login-box">
+    <h2>Smart Burme Login</h2>
+    <input type="email" id="email" placeholder="Email">
+    <input type="password" id="password" placeholder="Password">
+    <button id="loginBtn">Login</button>
+    <p id="error-message" style="color: red; margin-top: 10px;"></p>
   </div>
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-    import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
+    import { getAuth, signInWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyAr7Hv2ApKtNTxF11MhT5cuWeg_Dgsh0TY",
@@ -140,22 +71,33 @@
       appId: "1:851502425686:web:f29e0e1dfa84794b4abdf7"
     };
 
+    // Initialize Firebase
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
 
-    document.getElementById('loginForm').addEventListener('submit', (e) => {
-      e.preventDefault();
+    // Check if already logged in
+    onAuthStateChanged(auth, (user) => {
+      if (user) {
+        window.location.href = "main.html";
+      }
+    });
+
+    // Login button
+    const loginBtn = document.getElementById('loginBtn');
+    loginBtn.addEventListener('click', () => {
       const email = document.getElementById('email').value;
       const password = document.getElementById('password').value;
+      const errorMessage = document.getElementById('error-message');
 
       signInWithEmailAndPassword(auth, email, password)
-        .then(() => {
-          window.location.href = "interface/main.html";
+        .then((userCredential) => {
+          window.location.href = "main.html";
         })
         .catch((error) => {
-          alert("Login failed: " + error.message);
+          errorMessage.textContent = "Login failed: " + error.message;
         });
     });
   </script>
+
 </body>
 </html>
