--- a/index.html
+++ b/index.html
@@ -2,104 +2,71 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Smart Burme</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+  <title>Smart Burme Loader</title>
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Poppins', sans-serif;
-    }
     body {
-      background: linear-gradient(135deg, #4e00c2, #8e2de2);
-      min-height: 100vh;
+      margin: 0;
+      background: black;
+      height: 100vh;
+      overflow: hidden;
       display: flex;
       justify-content: center;
       align-items: center;
-      overflow: hidden;
-    }
-    .container {
-      width: 360px;
-      height: 720px;
-      background: url('https://i.pinimg.com/originals/7c/4f/4c/7c4f4c5b5deb1bae3553e9affb065c37.jpg') no-repeat center center/cover;
-      border-radius: 20px;
-      position: relative;
-      overflow: hidden;
-      box-shadow: 0 20px 50px rgba(0, 0, 0, 0.5);
-    }
-    .overlay {
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.5);
-      padding: 30px;
-      display: flex;
       flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      color: white;
+      font-family: 'Arial', sans-serif;
     }
     .logo {
-      font-size: 28px;
-      font-weight: bold;
+      font-size: 2em;
+      color: white;
+      opacity: 0;
+      animation: fadeIn 3s ease forwards;
       margin-bottom: 20px;
       letter-spacing: 2px;
+      text-shadow: 0 0 10px rgba(0,255,255,0.7);
     }
-    .slogan {
-      font-size: 14px;
-      margin-bottom: 50px;
-      opacity: 0.8;
+
+    @keyframes fadeIn {
+      to { opacity: 1; }
     }
-    .buttons {
-      display: flex;
-      gap: 20px;
-      margin-bottom: 30px;
+
+    .loader svg {
+      width: 150px;
+      height: 150px;
     }
-    .btn {
-      padding: 10px 20px;
-      border: none;
-      border-radius: 30px;
-      font-size: 14px;
-      cursor: pointer;
-      transition: all 0.3s;
+
+    .loader svg polygon {
+      fill: none;
+      stroke: #00ffff;
+      stroke-width: 8;
+      stroke-linecap: round;
+      stroke-linejoin: round;
+      stroke-dasharray: 240;
+      stroke-dashoffset: 240;
+      animation: draw 2s ease-in-out infinite alternate;
     }
-    .btn.signin {
-      background: linear-gradient(90deg, #6a11cb, #2575fc);
-      color: white;
-    }
-    .btn.signup {
-      background: transparent;
-      border: 2px solid white;
-      color: white;
-    }
-    .btn:hover {
-      opacity: 0.8;
-    }
-    .footer {
-      position: absolute;
-      bottom: 10px;
-      width: 100%;
-      text-align: center;
-      font-size: 12px;
-      opacity: 0.7;
+
+    @keyframes draw {
+      to {
+        stroke-dashoffset: 0;
+      }
     }
   </style>
 </head>
 <body>
 
-<div class="container">
-  <div class="overlay">
-    <div class="logo">SMART BURME</div>
-    <div class="slogan">CRAFT YOUR MIND<br>MIND YOUR CRAFT</div>
-    <div class="buttons">
-      <button class="btn signin">SIGN IN</button>
-      <button class="btn signup">SIGN UP</button>
-    </div>
-    <div class="footer">Deployment by Aung Myo Kyaw</div>
-  </div>
+<div class="logo">Smart Burme</div>
+
+<div class="loader">
+  <svg viewBox="0 0 100 100">
+    <polygon points="50,10 90,90 10,90" />
+  </svg>
 </div>
+
+<script>
+  setTimeout(function() {
+    window.location.href = "login.html"; // ဒီမှာ မင်း Login Page URL ထည့်
+  }, 3000); // 3000 milliseconds = 3 seconds
+</script>
 
 </body>
 </html>
