--- a/login.html
+++ b/login.html
@@ -2,102 +2,121 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Smart Burme - Login</title>
   <style>
     body {
       margin: 0;
-      font-family: 'Poppins', sans-serif;
-      background: linear-gradient(135deg, #1a1a40, #4b0082);
-      color: white;
+      height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
+      background: url('background/login.png') no-repeat center center/cover;
+      font-family: Arial, sans-serif;
     }
-    .login-box {
-      background: rgba(255, 255, 255, 0.1);
-      padding: 2rem;
-      border-radius: 1rem;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-      backdrop-filter: blur(10px);
-      width: 300px;
+
+    .container {
+      background: rgba(0, 0, 0, 0.6);
+      padding: 40px;
+      border-radius: 12px;
+      box-shadow: 0 0 20px #00ffff;
       text-align: center;
+      color: white;
+      width: 300px;
     }
-    input {
+
+    input[type="email"],
+    input[type="password"] {
       width: 100%;
       padding: 10px;
       margin: 10px 0;
       border: none;
-      border-radius: 5px;
-      outline: none;
+      border-radius: 8px;
+      background: rgba(255, 255, 255, 0.2);
+      color: white;
     }
+
     button {
       width: 100%;
       padding: 10px;
-      background: #6200ea;
-      border: none;
-      color: white;
-      font-weight: bold;
-      border-radius: 5px;
-      cursor: pointer;
       margin-top: 10px;
+      border: none;
+      border-radius: 8px;
+      background: #00ffff;
+      color: black;
+      font-weight: bold;
+      cursor: pointer;
+      transition: 0.3s;
     }
+
     button:hover {
-      background: #7b1fa2;
+      background: #00cccc;
+    }
+
+    h1 {
+      margin-bottom: 20px;
+      font-size: 24px;
+      color: #00ffff;
     }
   </style>
 </head>
 <body>
 
-  <div class="login-box">
-    <h2>Smart Burme Login</h2>
-    <input type="email" id="email" placeholder="Email">
-    <input type="password" id="password" placeholder="Password">
-    <button id="loginBtn">Login</button>
-    <p id="error-message" style="color: red; margin-top: 10px;"></p>
-  </div>
+<div class="container">
+  <h1>Smart Burme Login</h1>
+  <input type="email" id="email" placeholder="Email">
+  <input type="password" id="password" placeholder="Password">
+  <button onclick="signIn()">Sign In</button>
+  <button onclick="register()">Register</button>
+</div>
 
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-    import { getAuth, signInWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
+<!-- Firebase SDKs -->
+<script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-auth-compat.js"></script>
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyAr7Hv2ApKtNTxF11MhT5cuWeg_Dgsh0TY",
-      authDomain: "smart-burme-app.firebaseapp.com",
-      projectId: "smart-burme-app",
-      storageBucket: "smart-burme-app.appspot.com",
-      messagingSenderId: "851502425686",
-      appId: "1:851502425686:web:f29e0e1dfa84794b4abdf7"
-    };
+<script>
+  // Firebase Configuration (Your info)
+  const firebaseConfig = {
+    apiKey: "AIzaSyAr7Hv2ApKtNTxF11MhT5cuWeg_Dgsh0TY",
+    authDomain: "smart-burme-app.firebaseapp.com",
+    projectId: "smart-burme-app",
+    storageBucket: "smart-burme-app.appspot.com",
+    messagingSenderId: "851502425686",
+    appId: "1:851502425686:web:f29e0e1dfa84794b4abdf7"
+  };
 
-    // Initialize Firebase
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  const auth = firebase.auth();
 
-    // Check if already logged in
-    onAuthStateChanged(auth, (user) => {
-      if (user) {
-        window.location.href = "main.html";
-      }
-    });
+  // Sign In Function
+  function signIn() {
+    const email = document.getElementById('email').value;
+    const password = document.getElementById('password').value;
 
-    // Login button
-    const loginBtn = document.getElementById('loginBtn');
-    loginBtn.addEventListener('click', () => {
-      const email = document.getElementById('email').value;
-      const password = document.getElementById('password').value;
-      const errorMessage = document.getElementById('error-message');
+    auth.signInWithEmailAndPassword(email, password)
+      .then((userCredential) => {
+        alert('Sign In Successful!');
+        window.location.href = "mail.html"; // login အောင်မြင်ရင် mail.html သွားမယ်
+      })
+      .catch((error) => {
+        alert(error.message);
+      });
+  }
 
-      signInWithEmailAndPassword(auth, email, password)
-        .then((userCredential) => {
-          window.location.href = "main.html";
-        })
-        .catch((error) => {
-          errorMessage.textContent = "Login failed: " + error.message;
-        });
-    });
-  </script>
+  // Register Function
+  function register() {
+    const email = document.getElementById('email').value;
+    const password = document.getElementById('password').value;
+
+    auth.createUserWithEmailAndPassword(email, password)
+      .then((userCredential) => {
+        alert('Registration Successful! You can Sign In now.');
+      })
+      .catch((error) => {
+        alert(error.message);
+      });
+  }
+</script>
 
 </body>
 </html>
