--- a/login.html
+++ b/login.html
@@ -96,7 +96,7 @@
     auth.signInWithEmailAndPassword(email, password)
       .then((userCredential) => {
         alert('Sign In Successful!');
-        window.location.href = "mail.html"; // login အောင်မြင်ရင် mail.html သွားမယ်
+        window.location.href = "main.html"; // login အောင်မြင်ရင် mail.html သွားမယ်
       })
       .catch((error) => {
         alert(error.message);
