--- a/main.html
+++ b/main.html
@@ -2,233 +2,166 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <title>Smart Burme - Main</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Smart Burme - Photo/Video Post</title>
-
-  <!-- Ionicons CDN for icons -->
-  <script type="module" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.esm.js"></script>
-  <script nomodule src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.js"></script>
-
-  <!-- Firebase SDK -->
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script>
+  
+  <!-- Ionicons CDN -->
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
   <style>
-    /* General Styles */
+    /* Body Background */
     body {
-      font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #f0f0f0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-      flex-direction: column;
+      background: url('background/main.jpg') no-repeat center center fixed;
+      background-size: cover;
+      font-family: Arial, sans-serif;
+      overflow-x: hidden;
     }
 
-    /* Content Area */
-    .content {
-      display: flex;
-      justify-content: center;
-      align-items: center;
+    /* Upload View Area */
+    .upload-view {
       width: 100%;
-      height: 80vh;
+      height: calc(100vh - 80px);
+      position: relative;
+      overflow: hidden;
     }
 
-    /* Left Side - Photo/Video View */
-    .media-view {
-      width: 60%;
+    /* Upload Content Placeholder */
+    .upload-content {
+      width: 100%;
       height: 100%;
-      background-color: #fff;
-      border-radius: 10px;
+      background: rgba(0, 0, 0, 0.4);
       display: flex;
       justify-content: center;
       align-items: center;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      font-size: 24px;
+      color: white;
     }
 
-    .media-view img, .media-view video {
-      max-width: 100%;
-      max-height: 100%;
-      border-radius: 10px;
-    }
-
-    /* Right Side - Action Icons */
-    .actions {
-      position: absolute;
-      right: 10px;
-      top: 50%;
-      transform: translateY(-50%);
+    /* View Area Icons Layout */
+    .view-icons {
+      position: fixed;
+      right: 15px;
+      top: 120px;
       display: flex;
       flex-direction: column;
-      align-items: center;
-      z-index: 1;
+      gap: 20px;
+      z-index: 999;
     }
 
-    .actions .icon {
-      margin: 20px 0;
-      width: 60px;
-      height: 60px;
-      background-color: #fff;
+    .icon-box {
+      width: 50px;
+      height: 50px;
+      background: rgba(32, 156, 255, 0.8);
+      backdrop-filter: blur(8px);
       border-radius: 50%;
       display: flex;
       justify-content: center;
       align-items: center;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-      cursor: pointer;
-      transition: all 0.3s ease;
+      color: #fff;
+      font-size: 26px;
+      box-shadow: 0 0 12px #209cff, 0 0 25px #209cff;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
 
-    .actions .icon:hover {
-      background-color: #209cff;
+    .icon-box:hover {
       transform: scale(1.2);
+      box-shadow: 0 0 20px #00ffe0, 0 0 40px #00ffe0;
     }
 
-    .actions .icon ion-icon {
-      font-size: 35px;
-      color: #209cff;
-      transition: color 0.3s ease;
-    }
-
-    .actions .icon:hover ion-icon {
-      color: white;
-    }
-
-    /* Floating Bottom Navigation */
-    .bottom-nav {
+    /* Bottom Navigation */
+    .navigation {
+      width: 100%;
+      height: 70px;
+      background: rgba(0, 0, 0, 0.6);
       position: fixed;
       bottom: 0;
-      width: 100%;
-      background-color: #209cff;
-      padding: 15px 0;
       display: flex;
       justify-content: space-around;
       align-items: center;
-      border-radius: 20px 20px 0 0;
-      box-shadow: 0 -4px 15px rgba(0, 0, 0, 0.2);
-      z-index: 10;
+      z-index: 1000;
+      border-top: 2px solid #209cff;
+      backdrop-filter: blur(10px);
     }
 
-    .bottom-nav .nav-item {
+    .navigation a {
+      color: white;
+      font-size: 26px;
+      text-decoration: none;
+      transition: 0.3s;
+    }
+
+    .navigation a:hover {
+      color: #00ffe0;
+      transform: scale(1.2);
+    }
+
+    /* Floating Add Button */
+    .add-button {
       width: 60px;
       height: 60px;
-      background-color: #fff;
+      background: linear-gradient(135deg, #209cff, #68e0cf);
       border-radius: 50%;
       display: flex;
       justify-content: center;
       align-items: center;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-      cursor: pointer;
-      transition: all 0.3s ease;
+      margin-bottom: 30px;
+      box-shadow: 0 0 15px #00ffe0;
+      position: relative;
+      top: -30px;
+      z-index: 1001;
+      animation: float3D 2s infinite ease-in-out;
     }
 
-    .bottom-nav .nav-item:hover {
-      background-color: #209cff;
-      transform: scale(1.1);
-    }
-
-    .bottom-nav .nav-item ion-icon {
-      font-size: 30px;
-      color: #209cff;
-    }
-
-    .bottom-nav .nav-item:hover ion-icon {
-      color: white;
+    /* 3D floating animation */
+    @keyframes float3D {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-8px); }
     }
 
   </style>
 </head>
+
 <body>
 
-  <!-- Content Area -->
-  <div class="content">
-    <!-- Left: Photo/Video View -->
-    <div class="media-view">
-      <img src="your-image-url.jpg" alt="Sample Post"> <!-- Replace with actual photo/video URL -->
-      <!-- <video src="your-video-url.mp4" controls></video> -->
+  <!-- Upload View Area -->
+  <div class="upload-view">
+    <div class="upload-content">
+      Upload your Photo / Video
     </div>
 
-    <!-- Right: Action Icons -->
-    <div class="actions">
-      <!-- Add Friend Icon -->
-      <div class="icon" onclick="addFriend()">
+    <!-- Up to Down Right Side Icons -->
+    <div class="view-icons">
+      <div class="icon-box">
         <ion-icon name="person-add-outline"></ion-icon>
       </div>
-
-      <!-- Like Icon -->
-      <div class="icon" onclick="likePost()">
+      <div class="icon-box">
         <ion-icon name="heart-outline"></ion-icon>
       </div>
-
-      <!-- Save Icon -->
-      <div class="icon" onclick="savePost()">
+      <div class="icon-box">
         <ion-icon name="bookmark-outline"></ion-icon>
       </div>
-
-      <!-- Share Icon -->
-      <div class="icon" onclick="sharePost()">
+      <div class="icon-box">
         <ion-icon name="share-social-outline"></ion-icon>
       </div>
     </div>
   </div>
 
-  <!-- Floating Bottom Navigation -->
-  <div class="bottom-nav">
-    <div class="nav-item">
-      <ion-icon name="home-outline"></ion-icon>
+  <!-- Bottom Navigation -->
+  <div class="navigation">
+    <a href="#"><ion-icon name="home-outline"></ion-icon></a>
+    <a href="#"><ion-icon name="people-outline"></ion-icon></a>
+
+    <!-- Floating Add Button -->
+    <div class="add-button">
+      <ion-icon name="add-outline"></ion-icon>
     </div>
-    <div class="nav-item">
-      <ion-icon name="person-outline"></ion-icon>
-    </div>
-    <div class="nav-item">
-      <ion-icon name="add-circle-outline"></ion-icon>
-    </div>
-    <div class="nav-item">
-      <ion-icon name="chatbubbles-outline"></ion-icon>
-    </div>
-    <div class="nav-item">
-      <ion-icon name="settings-outline"></ion-icon>
-    </div>
+
+    <a href="#"><ion-icon name="chatbubble-ellipses-outline"></ion-icon></a>
+    <a href="#"><ion-icon name="person-circle-outline"></ion-icon></a>
   </div>
-
-  <!-- Firebase SDK Setup -->
-  <script>
-    // Firebase Configuration
-    const firebaseConfig = {
-      apiKey: "AIzaSyAr7Hv2ApKtNTxF11MhT5cuWeg_Dgsh0TY",
-      authDomain: "smart-burme-app.firebaseapp.com",
-      projectId: "smart-burme-app",
-      storageBucket: "smart-burme-app.appspot.com",
-      messagingSenderId: "851502425686",
-      appId: "1:851502425686:web:f29e0e1dfa84794b4abdf7"
-    };
-
-    // Initialize Firebase
-    const app = firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
-
-    // JavaScript Functions for Actions
-    function addFriend() {
-      console.log("Friend added!");
-      alert("You added a friend!");
-    }
-
-    function likePost() {
-      console.log("Post liked!");
-      alert("You liked this post!");
-    }
-
-    function savePost() {
-      console.log("Post saved!");
-      alert("You saved this post!");
-    }
-
-    function sharePost() {
-      console.log("Post shared!");
-      alert("You shared this post!");
-    }
-  </script>
 
 </body>
 </html>
