--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
     body {
       margin: 0;
       padding: 0;
-      background: url('background/main.jpg') no-repeat center center fixed;
+      background: url('background/main.mp4') no-repeat center center fixed;
       background-size: cover;
       font-family: Arial, sans-serif;
       overflow-x: hidden;
