--- a/main.html
+++ b/main.html
@@ -5,163 +5,146 @@
   <title>Smart Burme - Main</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <!-- Ionicons CDN -->
-  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+  <!-- Firebase SDK -->
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
 
   <style>
-    /* Body Background */
     body {
       margin: 0;
       padding: 0;
-      background: url('background/main.mp4') no-repeat center center fixed;
+      background: url('background/main.jpg') no-repeat center center fixed;
       background-size: cover;
       font-family: Arial, sans-serif;
-      overflow-x: hidden;
     }
-
-    /* Upload View Area */
-    .upload-view {
-      width: 100%;
-      height: calc(100vh - 80px);
+    .view-area {
       position: relative;
+      height: calc(100vh - 80px);
       overflow: hidden;
+      padding-top: 10px;
     }
-
-    /* Upload Content Placeholder */
-    .upload-content {
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.4);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 24px;
-      color: white;
-    }
-
-    /* View Area Icons Layout */
-    .view-icons {
-      position: fixed;
-      right: 15px;
-      top: 320px;
+    .floating-icons {
+      position: absolute;
+      top: 50px;
+      right: 10px;
       display: flex;
       flex-direction: column;
       gap: 20px;
-      z-index: 999;
+      z-index: 10;
     }
-
-    .icon-box {
-      width: 50px;
-      height: 50px;
-      background: rgba(32, 156, 255, 0.8);
-      backdrop-filter: blur(8px);
-      border-radius: 50%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+    .floating-icons ion-icon {
+      font-size: 30px;
       color: #fff;
-      font-size: 26px;
-      box-shadow: 0 0 12px #209cff, 0 0 25px #209cff;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      filter: drop-shadow(0 0 5px #00f0ff);
+      cursor: pointer;
+      transition: transform 0.2s;
     }
-
-    .icon-box:hover {
+    .floating-icons ion-icon:hover {
       transform: scale(1.2);
-      box-shadow: 0 0 20px #00ffe0, 0 0 40px #00ffe0;
     }
-
-    /* Bottom Navigation */
     .navigation {
       width: 100%;
       height: 70px;
-      background: rgba(0, 0, 0, 0.6);
+      background: rgba(32, 156, 255, 0.9);
       position: fixed;
       bottom: 0;
+      left: 0;
       display: flex;
       justify-content: space-around;
       align-items: center;
-      z-index: 1000;
-      border-top: 2px solid #209cff;
-      backdrop-filter: blur(10px);
+      z-index: 100;
+      border-radius: 20px 20px 0 0;
     }
-
-    .navigation a {
-      color: white;
-      font-size: 26px;
+    .navigation a, .navigation .add-button {
       text-decoration: none;
-      transition: 0.3s;
+      color: white;
+      font-size: 24px;
     }
-
-    .navigation a:hover {
-      color: #00ffe0;
-      transform: scale(1.2);
-    }
-
-    /* Floating Add Button */
     .add-button {
+      background: linear-gradient(45deg, #209cff, #68e0cf);
       width: 60px;
       height: 60px;
-      background: linear-gradient(135deg, #209cff, #68e0cf);
       border-radius: 50%;
       display: flex;
-      justify-content: center;
       align-items: center;
-      margin-bottom: 30px;
-      box-shadow: 0 0 15px #00ffe0;
-      position: relative;
-      top: -30px;
-      z-index: 1001;
-      animation: float3D 2s infinite ease-in-out;
+      justify-content: center;
+      margin-top: -30px;
+      box-shadow: 0 0 10px #68e0cf, 0 0 20px #68e0cf;
+      cursor: pointer;
     }
-
-    /* 3D floating animation */
-    @keyframes float3D {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-8px); }
-    }
-
   </style>
 </head>
 
 <body>
 
-  <!-- Upload View Area -->
-  <div class="upload-view">
-    <div class="upload-content">
-      Upload your Photo / Video
+  <!-- View Area -->
+  <div class="view-area">
+    <!-- Floating Icons (Right Side) -->
+    <div class="floating-icons">
+      <ion-icon name="person-add-outline" onclick="addFriend()"></ion-icon>
+      <ion-icon name="heart-outline" onclick="likePost()"></ion-icon>
+      <ion-icon name="bookmark-outline" onclick="savePost()"></ion-icon>
+      <ion-icon name="share-social-outline" onclick="sharePost()"></ion-icon>
     </div>
 
-    <!-- Up to Down Right Side Icons -->
-    <div class="view-icons">
-      <div class="icon-box">
-        <ion-icon name="person-add-outline"></ion-icon>
-      </div>
-      <div class="icon-box">
-        <ion-icon name="heart-outline"></ion-icon>
-      </div>
-      <div class="icon-box">
-        <ion-icon name="bookmark-outline"></ion-icon>
-      </div>
-      <div class="icon-box">
-        <ion-icon name="share-social-outline"></ion-icon>
-      </div>
-    </div>
+    <!-- Your upload photos & videos area can be here -->
+
   </div>
 
   <!-- Bottom Navigation -->
   <div class="navigation">
-    <a href="#"><ion-icon name="home-outline"></ion-icon></a>
-    <a href="#"><ion-icon name="people-outline"></ion-icon></a>
+    <a href="interface-bottom/home.html"><ion-icon name="home-outline"></ion-icon></a>
+    <a href="interface-bottom/friend.html"><ion-icon name="people-outline"></ion-icon></a>
 
     <!-- Floating Add Button -->
-    <div class="add-button">
+    <div class="add-button" onclick="openAddPage()">
       <ion-icon name="add-outline"></ion-icon>
     </div>
 
-    <a href="#"><ion-icon name="chatbubble-ellipses-outline"></ion-icon></a>
-    <a href="#"><ion-icon name="person-circle-outline"></ion-icon></a>
+    <a href="interface-bottom/message.html"><ion-icon name="chatbubble-ellipses-outline"></ion-icon></a>
+    <a href="interface-bottom/account.html"><ion-icon name="person-circle-outline"></ion-icon></a>
   </div>
+
+  <!-- Ionicons -->
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
+  <!-- Firebase Config -->
+  <script>
+    var firebaseConfig = {
+      apiKey: "AIzaSyAr7Hv2ApKtNTxF11MhT5cuWeg_Dgsh0TY",
+      authDomain: "smart-burme-app.firebaseapp.com",
+      projectId: "smart-burme-app",
+      storageBucket: "smart-burme-app.appspot.com",
+      messagingSenderId: "851502425686",
+      appId: "1:851502425686:web:f29e0e1dfa84794b4abdf7"
+    };
+    firebase.initializeApp(firebaseConfig);
+  </script>
+
+  <!-- Bottom Functions -->
+  <script src="js/bottom.js"></script>
+
+  <!-- Floating Icon Functions -->
+  <script>
+    function addFriend() {
+      alert("Add Friend Clicked!");
+    }
+    function likePost() {
+      alert("Liked!");
+    }
+    function savePost() {
+      alert("Saved!");
+    }
+    function sharePost() {
+      alert("Shared!");
+    }
+    function openAddPage() {
+      window.location.href = "interface-bottom/add.html";
+    }
+  </script>
 
 </body>
 </html>
